# isoft/isoft_deploy_api/swagger/swagger.json
@@ -93,6 +93,20 @@
                 ]
             }
         },
+        "/service/fileUpload": {
+            "post": {
+                "tags": [
+                    "service"
+                ]
+            }
+        },
+        "/service/getServiceTrackingLogDetail": {
+            "post": {
+                "tags": [
+                    "service"
+                ]
+            }
+        },
         "/service/list": {
             "post": {
                 "tags": [
